--- a/src/index.html
+++ b/src/index.html
@@ -10,7 +10,7 @@
   <meta name="format-detection" content="telephone=no">
   <meta name="msapplication-tap-highlight" content="no">
 
-  <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Montserrat:400,500" rel="stylesheet">
   <link rel="icon" type="image/png" href="assets/icon/favicon.png">
 
   <!-- add to homescreen for ios -->
